tests/baselines/reference/functionOverloads40.errors.txt
tests/cases/compiler/functionOverloads40.ts(4,13): error TS2345: Argument of type '{ a: "bar"; }[]' is not assignable to parameter of type '{ a: boolean; }[]'.
  Type '{ a: "bar"; }' is not assignable to type '{ a: boolean; }'.
    Types of property 'a' are incompatible.
      Type '"bar"' is not assignable to type 'boolean'.


==== tests/cases/compiler/functionOverloads40.ts (1 errors) ====
    function foo(bar:{a:number;}[]):string;
    function foo(bar:{a:boolean;}[]):number;
    function foo(bar:{a:any;}[]):any{ return bar }
    var x = foo([{a:'bar'}]);
                ~~~~~~~~~~~
!!! error TS2345: Argument of type '{ a: "bar"; }[]' is not assignable to parameter of type '{ a: boolean; }[]'.
!!! error TS2345:   Type '{ a: "bar"; }' is not assignable to type '{ a: boolean; }'.
!!! error TS2345:     Types of property 'a' are incompatible.
!!! error TS2345:       Type '"bar"' is not assignable to type 'boolean'.
    